# llamda-cli

./: .python_version  README.md  llamda-cli.xml  mkdocs.yml  pyproject.toml
.github/hooks/: pre-push
.github/workflows/: release.yml
llamda_cli/: __init__.py
llamda_cli/lld/: __init__.py
llamda_cli/lld/cli/: __init__.py  lld_cli.py  option_decorators.py
llamda_cli/lld/files/: __init__.py  files.py
llamda_cli/lld/utils/: __init__.py  console.py  files.py  git.py
llamda_cli/lld_cli/: __init__.py  lld_cli.py
llamda_cli/lld_docs/: __init__.py  collect_docs.py  get_md_files.py  template.jinja2
llamda_cli/lld_utils/: __init__.py  cli.py  files.py  template.py
